# polymarket_bot

./: CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
polymarket_bot/: __main__.py  cache.py  cli.py  engine.py  models.py  output.py
polymarket_bot/api/: clob.py  gamma.py
polymarket_bot/strategies/: base.py  late_conviction.py  low_odds_contra.py  mean_reversion.py  momentum.py  volatility_breakout.py
