[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "polymarket-bot"
version = "0.1.0"
description = "Polymarket backtesting simulator"
requires-python = ">=3.10"
dependencies = ["requests>=2.31"]

[project.scripts]
polymarket-bot = "polymarket_bot.cli:main"
